sockshop/carts-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
  labels:
    app: carts
    version: v1
spec:
  selector:
    matchLabels:
      app: carts
      version: v1
  template:
    metadata:
      labels:
        app: carts
        version: v1
    spec:
      containers:
      - name: carts
        image: weaveworksdemos/carts:0.4.8
        ports:
        - containerPort: 80
