sockshop/catalogue-db-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue-db
  labels:
    app: catalogue-db
    version: v1
spec:
  selector:
    matchLabels:
      app: catalogue-db
      version: v1
  template:
    metadata:
      labels:
        app: catalogue-db
        version: v1
    spec:
      containers:
      - name: catalogue-db
        image: weaveworksdemos/catalogue-db:0.3.0
        ports:
        - containerPort: 3306
