sockshop/orders-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  labels:
    app: orders
    version: v1
spec:
  selector:
    matchLabels:
      app: orders
      version: v1  
  template:
    metadata:
      labels:
        app: orders
        version: v1
    spec:
      containers:
      - name: orders
        image: weaveworksdemos/orders:0.4.7
        ports:
        - containerPort: 80
