sockshop/queue-master-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-master
  labels:
    app: queue-master
    version: v1
spec:
  selector:
    matchLabels:
      app: queue-master
      version: v1
  template:
    metadata:
      labels:
        app: queue-master
        version: v1
    spec:
      containers:
      - name: queue-master
        image: weaveworksdemos/queue-master:0.3.1
        ports:
        - containerPort: 80
