sockshop/session-db-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-db
  labels:
    app: session-db
    version: v1
spec:
  selector:
    matchLabels:
      app: session-db
      version: v1
  template:
    metadata:
      labels:
        app: session-db
        version: v1
      annotations:
        prometheus.io.scrape: "false"
    spec:
      containers:
      - name: session-db
        image: redis:alpine
        ports:
        - name: redis
          containerPort: 6379
