sockshop/shipping-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
  labels:
    app: shipping
    version: v1
spec:
  selector:
    matchLabels:
      app: shipping
      version: v1
  template:
    metadata:
      labels:
        app: shipping
        version: v1
    spec:
      containers:
      - name: shipping
        image: weaveworksdemos/shipping:0.4.8
        ports:
        - containerPort: 80
