sockshop/user-db-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db
  labels:
    app: user-db
    version: v1
spec:
  selector:
    matchLabels:
      app: user-db
      version: v1
  template:
    metadata:
      labels:
        app: user-db
        version: v1
    spec:
      containers:
      - name: user-db
        image: weaveworksdemos/user-db:0.3.0
        ports:
        - containerPort: 27017
