sockshop/carts-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts-db
  labels:
    app: carts-db
spec:
  ports:
  - port: 27017
    name: mongo
  selector:
    app: carts-db
