sockshop/carts-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: carts
  labels:
    app: carts
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: carts
