sockshop/catalogue-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue-db
  labels:
    app: catalogue-db
spec:
  ports:
  - port: 3306
    name: tcp
  selector:
    app: catalogue-db
