sockshop/catalogue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  labels:
    app: catalogue
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: catalogue
