sockshop/front-end-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    app: front-end
spec:
  ports:
  - port: 8079
    name: http
  selector:
    app: front-end
