sockshop/orders-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  labels:
    app: orders-db
spec:
  ports:
  - port: 27017
    name: mongo
  selector:
    app: orders-db
