sockshop/orders-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  labels:
    app: orders
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: orders
