sockshop/payment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: payment
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: payment
