sockshop/queue-master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue-master
  labels:
    app: queue-master
  annotations:
    prometheus.io/path: "/prometheus"
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: queue-master
