sockshop/rabbitmq-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  ports:
    # the port that this service should serve on
  - port: 5672
    name: tcp-rabbitmq
  - port: 9090
    name: tcp-exporter
  selector:
    app: rabbitmq
