sockshop/session-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: session-db
  labels:
    app: session-db
spec:
  ports:
    # the port that this service should serve on
  - port: 6379
    name: redis
  selector:
    app: session-db
