sockshop/shipping-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping
  labels:
    app: shipping
spec:
  ports:
    # the port that this service should serve on
  - port: 80
    name: http
  selector:
    app: shipping
