sockshop/user-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-db
  labels:
    app: user-db
spec:
  ports:
  - port: 27017
    name: mongo
  selector:
    app: user-db
