sockshop/user-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: user
